--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -48,9 +48,12 @@
     <Compile Include="tabuleiro\Posicao.cs" />
     <Compile Include="tabuleiro\Tabuleiro.cs" />
     <Compile Include="Tela.cs" />
+    <Compile Include="xadrez\Torre.cs" />
+    <Compile Include="xadrez\Rei.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
