--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tabuleiro\TabuleiroException.cs" />
     <Compile Include="tabuleiro\Cor.cs" />
     <Compile Include="tabuleiro\Peca.cs" />
     <Compile Include="tabuleiro\Posicao.cs" />
     <Compile Include="tabuleiro\Tabuleiro.cs" />
     <Compile Include="Tela.cs" />
+    <Compile Include="xadrez\PosicaoXadrez.cs" />
     <Compile Include="xadrez\Torre.cs" />
     <Compile Include="xadrez\Rei.cs" />
   </ItemGroup>
