--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -49,6 +49,7 @@
     <Compile Include="tabuleiro\Posicao.cs" />
     <Compile Include="tabuleiro\Tabuleiro.cs" />
     <Compile Include="Tela.cs" />
+    <Compile Include="xadrez\PartidaXadrez.cs" />
     <Compile Include="xadrez\PosicaoXadrez.cs" />
     <Compile Include="xadrez\Torre.cs" />
     <Compile Include="xadrez\Rei.cs" />
